--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -15,7 +15,7 @@ const title = `Error 404`;
         </h2>
         <p class="text-3xl font-semibold md:text-3xl">No pudimos encontrar esta página.</p>
         <p class="mt-4 mb-8 text-lg text-muted dark:text-slate-400">
-          No te preocupes, vuelve a la web de ModelDesktop.
+          No te preocupes, vuelve a la web.
         </p>
         <a rel="noopener noreferrer" href={getHomePermalink()} class="btn ml-4">Back to homepage</a>
       </div>
