--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -2,8 +2,15 @@
 import { SITE } from 'astrowind:config';
 ---
 
-<span
-  class="self-center ml-2 rtl:ml-0 rtl:mr-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white"
->
-  🚀 {SITE?.name}
-</span>
+<div class="flex items-center">
+  <img
+    src="/images/logo.png"
+    alt="AIRconsulting Logo"
+    class="h-16 w-auto mr-2"
+  />
+  <span
+    class="self-center text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white"
+  >
+    {SITE?.name}
+  </span>
+</div>
